--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,11 @@
 								<li><a href="/#ft-slider-3" class="menuActive">Home</a></li>
 								<li><a href="/#ft-about-2" class="menuActive">About</a></li>
 								<li><a href="/#ft-service-3" class="menuActive">Service</a></li>
+								<li class="d-none"><a href="" class="menuActive"></a></li>
+								<li class="d-none"><a href="" class="menuActive"></a></li>
+								<li class="d-none"><a href="" class="menuActive"></a></li>
+								<li class="d-none"><a href="" class="menuActive"></a></li>
+								<li><a href="#ft-project-page" class="menuActive">Portfolio</a></li>
 							</ul>
 						</nav>
 						<div class="ft-header-cta-btn">
@@ -73,6 +78,11 @@
                                     <li><a href="/#ft-slider-3" class="menuActive active">Home</a></li>
                                     <li><a href="/#ft-about-2" class="menuActive">About</a></li>
                                     <li><a href="/#ft-service-3" class="menuActive">Service</a></li>
+									<li class="d-none"><a href="" class="menuActive"></a></li>
+									<li class="d-none"><a href="" class="menuActive"></a></li>
+									<li class="d-none"><a href="" class="menuActive"></a></li>
+									<li class="d-none"><a href="" class="menuActive"></a></li>
+									<li><a href="#ft-project-page" class="menuActive">Portfolio</a></li>
                                 </ul>
 							</nav>
 						</div>
