--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                                 <li><a href="#ft-slider-3" class="menuActive active">Home</a></li>
                                 <li><a href="#ft-about-2" class="menuActive">About</a></li>
                                 <li><a href="#ft-service-3" class="menuActive">Service</a></li>
+                                <li class="d-none"><a href="" class="menuActive"></a></li>
+                                <li class="d-none"><a href="" class="menuActive"></a></li>
+                                <li class="d-none"><a href="" class="menuActive"></a></li>
+                                <li class="d-none"><a href="" class="menuActive"></a></li>
+                                <li class="d-none"><a href="" class="menuActive"></a></li>
+                                <li><a href="#ft-project-page" class="menuActive">Portfolio</a></li>
                             </ul>
                         </nav>
                         <div class="ft-header-cta-btn">
@@ -73,6 +79,12 @@
                                     <li><a href="#ft-slider-3" class="menuActive active">Home</a></li>
                                     <li><a href="#ft-about-2" class="menuActive">About</a></li>
                                     <li><a href="#ft-service-3" class="menuActive">Service</a></li>
+                                    <li class="d-none"><a href="" class="menuActive"></a></li>
+                                    <li class="d-none"><a href="" class="menuActive"></a></li>
+                                    <li class="d-none"><a href="" class="menuActive"></a></li>
+                                    <li class="d-none"><a href="" class="menuActive"></a></li>
+                                    <li class="d-none"><a href="" class="menuActive"></a></li>
+                                    <li><a href="#ft-project-page" class="menuActive">Portfolio</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -747,6 +759,122 @@
         </div>
     </section>
     <!-- End of testimonial section -->
+
+    <!-- Start of Project section -->
+	<section id="ft-project-page" class="ft-project-page-section page-padding ft-service-section-3">
+		<div class="container">
+			<div class="ft-section-title-2 headline pera-content text-center">
+				<span class="sub-title">Project</span>
+				<h2>Let's Checkout our All Top Ratted
+					Latest Project
+				</h2>
+			</div>
+			<div class="ft-project-post-item-content">
+				<div class="ft-project-item-filter-btn ul-li">
+					<ul id="filters" class="nav-gallery text-center">
+						<li class="filtr-button filtr-active" data-filter="all">All</li>
+						<li class="filtr-button" data-filter="1">Ocen Freight </li>
+						<li class="filtr-button" data-filter="2">Air Freight</li>
+						<li class="filtr-button" data-filter="3">Rail Freight </li>
+						<li class="filtr-button" data-filter="4">Warehouse Freight </li>
+					</ul>
+				</div>
+				<div class="ft-project-item-wrapper filtr-container row">
+					<div class="col-lg-4 col-sm-6 filtr-item" data-category="1, 3, 4" data-sort="Busy streets">
+						<div class="ft-portfolio-slider-innerbox position-relative">
+							<div class="ft-portfolio-img">
+								<img src="assets/img/project/port1.jpg" alt="">
+							</div>
+							<div class="ft-portfolio-text headline headline pera-content">
+								<h3><a href="project-single.html">Service & Aftermarket
+								Logistics</a></h3>
+								<p>dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus facilisis. </p>
+								<div class="ft-btn-3">
+									<a class="d-flex justify-content-center align-items-center" href="project-single.html">Read More <i class="flaticon-right-arrow"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6 filtr-item" data-category="2, 3, 4" data-sort="Busy streets">
+						<div class="ft-portfolio-slider-innerbox position-relative">
+							<div class="ft-portfolio-img">
+								<img src="assets/img/project/port2.jpg" alt="">
+							</div>
+							<div class="ft-portfolio-text headline headline pera-content">
+								<h3><a href="project-single.html">Service & Aftermarket
+								Logistics</a></h3>
+								<p>dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus facilisis. </p>
+								<div class="ft-btn-3">
+									<a class="d-flex justify-content-center align-items-center" href="project-single.html">Read More <i class="flaticon-right-arrow"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6 filtr-item" data-category="3, 4" data-sort="Busy streets">
+						<div class="ft-portfolio-slider-innerbox position-relative">
+							<div class="ft-portfolio-img">
+								<img src="assets/img/project/port3.jpg" alt="">
+							</div>
+							<div class="ft-portfolio-text headline headline pera-content">
+								<h3><a href="project-single.html">Service & Aftermarket
+								Logistics</a></h3>
+								<p>dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus facilisis. </p>
+								<div class="ft-btn-3">
+									<a class="d-flex justify-content-center align-items-center" href="project-single.html">Read More <i class="flaticon-right-arrow"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6 filtr-item" data-category="1, 2, 4" data-sort="Busy streets">
+						<div class="ft-portfolio-slider-innerbox position-relative">
+							<div class="ft-portfolio-img">
+								<img src="assets/img/project/port4.jpg" alt="">
+							</div>
+							<div class="ft-portfolio-text headline headline pera-content">
+								<h3><a href="project-single.html">Service & Aftermarket
+								Logistics</a></h3>
+								<p>dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus facilisis. </p>
+								<div class="ft-btn-3">
+									<a class="d-flex justify-content-center align-items-center" href="project-single.html">Read More <i class="flaticon-right-arrow"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6 filtr-item" data-category="1, 3, 2" data-sort="Busy streets">
+						<div class="ft-portfolio-slider-innerbox position-relative">
+							<div class="ft-portfolio-img">
+								<img src="assets/img/project/port3.jpg" alt="">
+							</div>
+							<div class="ft-portfolio-text headline headline pera-content">
+								<h3><a href="project-single.html">Service & Aftermarket
+								Logistics</a></h3>
+								<p>dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus facilisis. </p>
+								<div class="ft-btn-3">
+									<a class="d-flex justify-content-center align-items-center" href="project-single.html">Read More <i class="flaticon-right-arrow"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6 filtr-item" data-category="2, 3, 1" data-sort="Busy streets">
+						<div class="ft-portfolio-slider-innerbox position-relative">
+							<div class="ft-portfolio-img">
+								<img src="assets/img/project/port1.jpg" alt="">
+							</div>
+							<div class="ft-portfolio-text headline headline pera-content">
+								<h3><a href="project-single.html">Service & Aftermarket
+								Logistics</a></h3>
+								<p>dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus facilisis. </p>
+								<div class="ft-btn-3">
+									<a class="d-flex justify-content-center align-items-center" href="project-single.html">Read More <i class="flaticon-right-arrow"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+<!-- End of Project section -->	
 
     <!-- Modal Service 1 -->
     <div class="modal fade" id="service1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
