--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 								<li class="d-none"><a href="" class="menuActive"></a></li>
 								<li class="d-none"><a href="" class="menuActive"></a></li>
 								<li class="d-none"><a href="" class="menuActive"></a></li>
-								<li><a href="#ft-project-page" class="menuActive">Portfolio</a></li>
+								<li><a href="/#ft-project-page" class="menuActive">Portfolio</a></li>
 							</ul>
 						</nav>
 						<div class="ft-header-cta-btn">
@@ -82,7 +82,7 @@
 									<li class="d-none"><a href="" class="menuActive"></a></li>
 									<li class="d-none"><a href="" class="menuActive"></a></li>
 									<li class="d-none"><a href="" class="menuActive"></a></li>
-									<li><a href="#ft-project-page" class="menuActive">Portfolio</a></li>
+									<li><a href="/#ft-project-page" class="menuActive">Portfolio</a></li>
                                 </ul>
 							</nav>
 						</div>
