--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                             <div class="ft-about-feature-wrapper-2">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <div class="ft-about-feature-list-item d-flex align-items-center">
+                                        <div class="ft-about-feature-list-item d-flex align-items-center our-mission">
                                             <div
                                                 class="ft-about-feature-icon d-flex align-items-center justify-content-center">
                                                 <i class="fal fa-bullseye-arrow"></i>
@@ -267,7 +267,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
-                                        <div class="ft-about-feature-list-item d-flex align-items-center">
+                                        <div class="ft-about-feature-list-item d-flex align-items-center our-mission">
                                             <div
                                                 class="ft-about-feature-icon d-flex align-items-center justify-content-center">
                                                 <i class="fal fa-bullseye-arrow"></i>
